--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "gulp-autoprefixer": "^4.0.0",
     "gulp-minify": "^1.0.0",
     "gulp-sass": "^3.1.0",
+    "lodash": "^4.17.4",
+    "lodash.clonedeep": "^4.5.0",
     "webpack": "^3.0.0",
     "webpack-dev-server": "^2.5.0"
   }
