--- a/package.json
+++ b/package.json
@@ -27,13 +27,17 @@
     "underscore": "^1.8.3"
   },
   "devDependencies": {
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^4.1.0",
-    "gulp-minify": "^1.0.0",
-    "gulp-sass": "^3.2.0",
-    "lodash": "^4.17.5",
+    "gulp": "^4.0.0",
+    "gulp-autoprefixer": "^6.0.0",
+    "gulp-minify": "^3.0.15",
+    "gulp-sass": "^4.0.1",
+    "lodash": "^4.17.11",
     "lodash.clonedeep": "^4.5.0",
-    "webpack": "^3.11.0",
-    "webpack-dev-server": "^2.11.2"
-  }
+    "minimatch": "^3.0.4",
+    "webpack": "^4.20.0"
+  },
+  "browserslist": [
+    "> 1%",
+    "last 10 versions"
+  ]
 }
